--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0243cc43",
+   "id": "d63fef46",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "aa6d7139",
+   "id": "39587cc6",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a6e7816",
+   "id": "b41d97b8",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a394098",
+   "id": "f79b6b3b",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a6f1cf9f",
+   "id": "ef6c0e6e",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "61a4c744",
+   "id": "271ccc81",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8a0c44c3",
+   "id": "cada3384",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4d26bd62",
+   "id": "5124f3a3",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "98b18b13",
+   "id": "b9db9a57",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "c34201a0",
+   "id": "17857c0a",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9748a008",
+   "id": "214e83d7",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d284d004",
+   "id": "9369030e",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "6b943a26",
+   "id": "9cd5666c",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "16502b5f",
+   "id": "83da2209",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "f81a0b12",
+   "id": "f2047501",
    "metadata": {},
    "outputs": [
     {
@@ -331,23 +331,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "0c2a234f",
+   "execution_count": 75,
+   "id": "1cd751a4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a word:asdf\n",
-      "Enter an index2\n",
-      "Index 2 of asdf is d\n"
+      "Enter a word: asdf\n",
+      "Enter an index: 0\n",
+      "Index 0 of asdf is a\n"
      ]
     }
    ],
    "source": [
-    "word = input('Enter a word:')\n",
-    "ind = input('Enter an index')\n",
+    "word = input('Enter a word: ')\n",
+    "ind = input('Enter an index: ')\n",
     "ind = int(ind)\n",
     "\n",
     "if ind<0:\n",
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "189cdf3c",
+   "id": "504a360e",
    "metadata": {},
    "outputs": [],
    "source": []
