--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "88f00844",
+   "id": "09cc21f1",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "935baf29",
+   "id": "15621bfa",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c5f15b4f",
+   "id": "acb8a66b",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "040e9391",
+   "id": "5772fb9b",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a9ead268",
+   "id": "5f1f903e",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ab1bca8f",
+   "id": "c80b3ce6",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8ea01363",
+   "id": "5c79590c",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "0d527bca",
+   "id": "bd8ad129",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e437cc3",
+   "id": "de61451e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c5bf0fb",
+   "id": "c851453e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d4a217b1",
+   "id": "24f57301",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "60963a3f",
+   "id": "a52d9d6f",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "61ca4bc7",
+   "id": "9d874f11",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "f6efe758",
+   "id": "130a70ff",
    "metadata": {},
    "outputs": [
     {
@@ -292,8 +292,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "0b6477f2",
+   "execution_count": 89,
+   "id": "5683ef5b",
    "metadata": {},
    "outputs": [
     {
@@ -301,8 +301,8 @@
      "output_type": "stream",
      "text": [
       "Enter a word: taco\n",
-      "Enter an index: 5\n",
-      "5 is too big, and beyond index of taco.\n"
+      "Enter an index: 4\n",
+      "4 is too big, and beyond index of taco.\n"
      ]
     }
    ],
@@ -311,7 +311,7 @@
     "index = input(\"Enter an index: \")\n",
     "numberofindex = int(index)\n",
     "\n",
-    "if numberofindex > len(word):\n",
+    "if numberofindex > ((len(word))-1):\n",
     "    print(f\"{index} is too big, and beyond index of {word}.\")\n",
     "else: print(f\"Index {numberofindex} of the word {word} is the letter {word[numberofindex]}\")"
    ]
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2ad152e",
+   "id": "4af78d39",
    "metadata": {},
    "outputs": [],
    "source": []
