--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4127ba6b",
+   "id": "2fbfee8a",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e8f30ca3",
+   "id": "77e3cf76",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "126ddfd0",
+   "id": "6ab050b8",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "af155be6",
+   "id": "54411748",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "7b122aef",
+   "id": "15972a84",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "c3ddc746",
+   "id": "318bc49f",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "d1bed587",
+   "id": "17d19036",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "1f5f5d17",
+   "id": "3d51acc5",
    "metadata": {},
    "outputs": [
     {
@@ -254,8 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "60d1c47b",
+   "execution_count": 76,
+   "id": "d8dbb817",
    "metadata": {},
    "outputs": [
     {
@@ -263,9 +263,8 @@
      "output_type": "stream",
      "text": [
       "please enter a textasma\n",
-      "please enter a number-2\n",
-      "This is too low\n",
-      "Try again!2\n"
+      "please enter a number2\n",
+      "the text entered is asma m \n"
      ]
     }
    ],
@@ -281,15 +280,14 @@
     "    print('this is too high')\n",
     "    number=input('Try again!')\n",
     "else:\n",
-    "    x=text[number]\n",
-    "    print(f'the text entered is {text} {x} ')\n",
+    "    print(f'the text entered is {text} {text[number]} ')\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af8eb783",
+   "id": "5a65c5b5",
    "metadata": {},
    "outputs": [],
    "source": []
